--- a/RedBook8th/RedBook8th.vcxproj.filters
+++ b/RedBook8th/RedBook8th.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="GL\LoadShaders.cpp">
       <Filter>GL</Filter>
     </ClCompile>
+    <ClCompile Include="Examples\Ex02_04.cpp">
+      <Filter>Examples</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WinApi\WinParent.h">
@@ -62,5 +65,22 @@
     <ClInclude Include="GL\LoadShaders.h">
       <Filter>GL</Filter>
     </ClInclude>
+    <ClInclude Include="Examples\Ex02_04.h">
+      <Filter>Examples</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\triangles.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Shaders\triangles.vert">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Shaders\sh02_04.frag">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Shaders\sh02_04.vert">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
