--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -71,6 +71,7 @@
     <ClCompile Include="Examples\Ex02_04.cpp" />
     <ClCompile Include="Examples\Ex03_01.cpp" />
     <ClCompile Include="Examples\Ex03_05.cpp" />
+    <ClCompile Include="Examples\Ex03_07.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
     <ClCompile Include="main.cpp" />
@@ -83,6 +84,7 @@
     <ClInclude Include="Examples\Ex02_04.h" />
     <ClInclude Include="Examples\Ex03_01.h" />
     <ClInclude Include="Examples\Ex03_05.h" />
+    <ClInclude Include="Examples\Ex03_07.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
     <ClInclude Include="GL\LoadShaders.h" />
