Add and Finish 3.10

--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -67,11 +67,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Auxiliary\vbm.cpp" />
     <ClCompile Include="Examples\Ex01.cpp" />
     <ClCompile Include="Examples\Ex02_04.cpp" />
     <ClCompile Include="Examples\Ex03_01.cpp" />
     <ClCompile Include="Examples\Ex03_05.cpp" />
     <ClCompile Include="Examples\Ex03_07.cpp" />
+    <ClCompile Include="Examples\Ex03_10.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
     <ClCompile Include="main.cpp" />
@@ -79,12 +81,14 @@
     <ClCompile Include="WinApi\WinParent.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Auxiliary\vbm.h" />
     <ClInclude Include="Auxiliary\vmath.h" />
     <ClInclude Include="Examples\Ex01.h" />
     <ClInclude Include="Examples\Ex02_04.h" />
     <ClInclude Include="Examples\Ex03_01.h" />
     <ClInclude Include="Examples\Ex03_05.h" />
     <ClInclude Include="Examples\Ex03_07.h" />
+    <ClInclude Include="Examples\Ex03_10.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
     <ClInclude Include="GL\LoadShaders.h" />
@@ -98,6 +102,8 @@
     <None Include="Shaders\sh02_04.vert" />
     <None Include="Shaders\sh03_01.frag" />
     <None Include="Shaders\sh03_01.vert" />
+    <None Include="Shaders\sh03_10.frag" />
+    <None Include="Shaders\sh03_10.vert" />
     <None Include="Shaders\triangles.frag" />
     <None Include="Shaders\triangles.vert" />
   </ItemGroup>
