--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="Examples\Ex03_14.cpp" />
     <ClCompile Include="Examples\Ex04_01.cpp" />
     <ClCompile Include="Examples\Ex04_02.cpp" />
+    <ClCompile Include="Examples\Ex05_09.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
     <ClCompile Include="main.cpp" />
@@ -101,6 +102,7 @@
     <ClInclude Include="Examples\Ex03_14.h" />
     <ClInclude Include="Examples\Ex04_01.h" />
     <ClInclude Include="Examples\Ex04_02.h" />
+    <ClInclude Include="Examples\Ex05_09.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
     <ClInclude Include="GL\LoadShaders.h" />
@@ -124,6 +126,10 @@
     <None Include="Shaders\sh03_11.vert" />
     <None Include="Shaders\sh03_14.frag" />
     <None Include="Shaders\sh03_14.vert" />
+    <None Include="Shaders\sh05_08.frag" />
+    <None Include="Shaders\sh05_08.vert" />
+    <None Include="Shaders\sh05_10.frag" />
+    <None Include="Shaders\sh05_10.vert" />
     <None Include="Shaders\triangles.frag" />
     <None Include="Shaders\triangles.vert" />
   </ItemGroup>
