--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="Examples\Ex04_01.cpp" />
     <ClCompile Include="Examples\Ex04_02.cpp" />
     <ClCompile Include="Examples\Ex05_09.cpp" />
+    <ClCompile Include="Examples\Ex06_01.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
     <ClCompile Include="main.cpp" />
@@ -103,6 +104,7 @@
     <ClInclude Include="Examples\Ex04_01.h" />
     <ClInclude Include="Examples\Ex04_02.h" />
     <ClInclude Include="Examples\Ex05_09.h" />
+    <ClInclude Include="Examples\Ex06_01.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
     <ClInclude Include="GL\LoadShaders.h" />
@@ -130,6 +132,8 @@
     <None Include="Shaders\sh05_08.vert" />
     <None Include="Shaders\sh05_10.frag" />
     <None Include="Shaders\sh05_10.vert" />
+    <None Include="Shaders\sh06_01.frag" />
+    <None Include="Shaders\sh06_01.vert" />
     <None Include="Shaders\triangles.frag" />
     <None Include="Shaders\triangles.vert" />
   </ItemGroup>
