--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="Examples\Ex04_02.cpp" />
     <ClCompile Include="Examples\Ex05_09.cpp" />
     <ClCompile Include="Examples\Ex06_01.cpp" />
+    <ClCompile Include="Examples\Ex06_04.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
     <ClCompile Include="main.cpp" />
@@ -105,6 +106,7 @@
     <ClInclude Include="Examples\Ex04_02.h" />
     <ClInclude Include="Examples\Ex05_09.h" />
     <ClInclude Include="Examples\Ex06_01.h" />
+    <ClInclude Include="Examples\Ex06_04.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
     <ClInclude Include="GL\LoadShaders.h" />
