--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="Examples\Ex06_03.cpp" />
     <ClCompile Include="Examples\Ex06_04.cpp" />
     <ClCompile Include="Examples\Ex06_10.cpp" />
+    <ClCompile Include="Examples\Ex06_14.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
     <ClCompile Include="main.cpp" />
@@ -114,6 +115,7 @@
     <ClInclude Include="Examples\Ex06_03.h" />
     <ClInclude Include="Examples\Ex06_04.h" />
     <ClInclude Include="Examples\Ex06_10.h" />
+    <ClInclude Include="Examples\Ex06_14.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
     <ClInclude Include="GL\LoadShaders.h" />
@@ -143,6 +145,8 @@
     <None Include="Shaders\sh05_10.vert" />
     <None Include="Shaders\sh06_02.frag" />
     <None Include="Shaders\sh06_02.vert" />
+    <None Include="Shaders\sh06_14.frag" />
+    <None Include="Shaders\sh06_14.vert" />
     <None Include="Shaders\triangles.frag" />
     <None Include="Shaders\triangles.vert" />
   </ItemGroup>
