Add and Finish 7.3

--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -96,6 +96,8 @@
     <ClCompile Include="Examples\Ex06_18.cpp" />
     <ClCompile Include="Examples\Ex07_01.cpp" />
     <ClCompile Include="Examples\Ex07_02.cpp" />
+    <ClCompile Include="Examples\Ex07_03.cpp" />
+    <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
     <ClCompile Include="main.cpp" />
@@ -132,6 +134,8 @@
     <ClInclude Include="Examples\Ex06_18.h" />
     <ClInclude Include="Examples\Ex07_01.h" />
     <ClInclude Include="Examples\Ex07_02.h" />
+    <ClInclude Include="Examples\Ex07_03.h" />
+    <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
     <ClInclude Include="GL\LoadShaders.h" />
@@ -175,6 +179,10 @@
     <None Include="Shaders\sh07_01.vert" />
     <None Include="Shaders\sh07_02.frag" />
     <None Include="Shaders\sh07_02.vert" />
+    <None Include="Shaders\sh07_03.frag" />
+    <None Include="Shaders\sh07_03.vert" />
+    <None Include="Shaders\shTest.frag" />
+    <None Include="Shaders\shTest.vert" />
     <None Include="Shaders\skybox.frag" />
     <None Include="Shaders\skybox.vert" />
     <None Include="Shaders\triangles.frag" />
