--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="Examples\Ex07_03.cpp" />
     <ClCompile Include="Examples\Ex07_04.cpp" />
     <ClCompile Include="Examples\Ex07_05.cpp" />
+    <ClCompile Include="Examples\Ex07_06.cpp" />
     <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
@@ -139,6 +140,7 @@
     <ClInclude Include="Examples\Ex07_03.h" />
     <ClInclude Include="Examples\Ex07_04.h" />
     <ClInclude Include="Examples\Ex07_05.h" />
+    <ClInclude Include="Examples\Ex07_06.h" />
     <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
@@ -189,6 +191,8 @@
     <None Include="Shaders\sh07_04.vert" />
     <None Include="Shaders\sh07_05.frag" />
     <None Include="Shaders\sh07_05.vert" />
+    <None Include="Shaders\sh07_06.frag" />
+    <None Include="Shaders\sh07_06.vert" />
     <None Include="Shaders\shTest.frag" />
     <None Include="Shaders\shTest.vert" />
     <None Include="Shaders\skybox.frag" />
