--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="Examples\Ex07_08.cpp" />
     <ClCompile Include="Examples\Ex07_15.cpp" />
     <ClCompile Include="Examples\Ex08_01.cpp" />
+    <ClCompile Include="Examples\Ex08_03.cpp" />
     <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="Examples\Ex07_08.h" />
     <ClInclude Include="Examples\Ex07_15.h" />
     <ClInclude Include="Examples\Ex08_01.h" />
+    <ClInclude Include="Examples\Ex08_03.h" />
     <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
@@ -203,6 +205,8 @@
     <None Include="Shaders\sh07_08.vert" />
     <None Include="Shaders\sh08_01.frag" />
     <None Include="Shaders\sh08_01.vert" />
+    <None Include="Shaders\sh08_03.frag" />
+    <None Include="Shaders\sh08_03.vert" />
     <None Include="Shaders\shadowmap_scene.fs.glsl" />
     <None Include="Shaders\shadowmap_scene.vs.glsl" />
     <None Include="Shaders\shadowmap_shadow.fs.glsl" />
