--- a/RedBook8th/RedBook8th.vcxproj.filters
+++ b/RedBook8th/RedBook8th.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="Examples\Ex08_01.cpp">
       <Filter>Examples</Filter>
     </ClCompile>
+    <ClCompile Include="Examples\Ex08_03.cpp">
+      <Filter>Examples</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GL\glcorearb.h" />
@@ -233,6 +236,9 @@
       <Filter>Examples</Filter>
     </ClInclude>
     <ClInclude Include="Examples\Ex08_01.h">
+      <Filter>Examples</Filter>
+    </ClInclude>
+    <ClInclude Include="Examples\Ex08_03.h">
       <Filter>Examples</Filter>
     </ClInclude>
   </ItemGroup>
@@ -409,6 +415,12 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Shaders\sh08_01.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh08_03.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh08_03.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
