Add and Finish 8.7 and 8.8

--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -104,6 +104,9 @@
     <ClCompile Include="Examples\Ex07_15.cpp" />
     <ClCompile Include="Examples\Ex08_01.cpp" />
     <ClCompile Include="Examples\Ex08_03.cpp" />
+    <ClCompile Include="Examples\Ex08_07.cpp" />
+    <ClCompile Include="Examples\Ex08_08.cpp" />
+    <ClCompile Include="Examples\ExT.cpp" />
     <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
     <ClCompile Include="GL\LoadShaders.cpp" />
@@ -149,6 +152,9 @@
     <ClInclude Include="Examples\Ex07_15.h" />
     <ClInclude Include="Examples\Ex08_01.h" />
     <ClInclude Include="Examples\Ex08_03.h" />
+    <ClInclude Include="Examples\Ex08_07.h" />
+    <ClInclude Include="Examples\Ex08_08.h" />
+    <ClInclude Include="Examples\ExT.h" />
     <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
     <ClInclude Include="GL\glLoader.h" />
@@ -207,10 +213,16 @@
     <None Include="Shaders\sh08_01.vert" />
     <None Include="Shaders\sh08_03.frag" />
     <None Include="Shaders\sh08_03.vert" />
+    <None Include="Shaders\sh08_07.frag" />
+    <None Include="Shaders\sh08_07.vert" />
+    <None Include="Shaders\sh08_08.frag" />
+    <None Include="Shaders\sh08_08.vert" />
     <None Include="Shaders\shadowmap_scene.fs.glsl" />
     <None Include="Shaders\shadowmap_scene.vs.glsl" />
     <None Include="Shaders\shadowmap_shadow.fs.glsl" />
     <None Include="Shaders\shadowmap_shadow.vs.glsl" />
+    <None Include="Shaders\shT.frag" />
+    <None Include="Shaders\shT.vert" />
     <None Include="Shaders\shTest.frag" />
     <None Include="Shaders\shTest.vert" />
     <None Include="Shaders\skybox.frag" />
