Add and Finish 8.11

--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -107,6 +107,7 @@
     <ClCompile Include="Examples\Ex08_07.cpp" />
     <ClCompile Include="Examples\Ex08_08.cpp" />
     <ClCompile Include="Examples\Ex08_09.cpp" />
+    <ClCompile Include="Examples\Ex08_11.cpp" />
     <ClCompile Include="Examples\ExT.cpp" />
     <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
@@ -156,6 +157,7 @@
     <ClInclude Include="Examples\Ex08_07.h" />
     <ClInclude Include="Examples\Ex08_08.h" />
     <ClInclude Include="Examples\Ex08_09.h" />
+    <ClInclude Include="Examples\Ex08_11.h" />
     <ClInclude Include="Examples\ExT.h" />
     <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
@@ -221,6 +223,8 @@
     <None Include="Shaders\sh08_08.vert" />
     <None Include="Shaders\sh08_09.frag" />
     <None Include="Shaders\sh08_09.vert" />
+    <None Include="Shaders\sh08_11.frag" />
+    <None Include="Shaders\sh08_11.vert" />
     <None Include="Shaders\shadowmap_scene.fs.glsl" />
     <None Include="Shaders\shadowmap_scene.vs.glsl" />
     <None Include="Shaders\shadowmap_shadow.fs.glsl" />
