Add and Finish 8.12

--- a/RedBook8th/RedBook8th.vcxproj.filters
+++ b/RedBook8th/RedBook8th.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="Examples\Ex08_11.cpp">
       <Filter>Examples</Filter>
     </ClCompile>
+    <ClCompile Include="Examples\Ex08_12.cpp">
+      <Filter>Examples</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GL\glcorearb.h" />
@@ -269,6 +272,9 @@
       <Filter>Examples</Filter>
     </ClInclude>
     <ClInclude Include="Examples\Ex08_11.h">
+      <Filter>Examples</Filter>
+    </ClInclude>
+    <ClInclude Include="Examples\Ex08_12.h">
       <Filter>Examples</Filter>
     </ClInclude>
   </ItemGroup>
@@ -481,6 +487,12 @@
       <Filter>Shaders</Filter>
     </None>
     <None Include="Shaders\sh08_11.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh08_12.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\sh08_12.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
