--- a/RedBook8th/RedBook8th.vcxproj
+++ b/RedBook8th/RedBook8th.vcxproj
@@ -108,6 +108,7 @@
     <ClCompile Include="Examples\Ex08_08.cpp" />
     <ClCompile Include="Examples\Ex08_09.cpp" />
     <ClCompile Include="Examples\Ex08_11.cpp" />
+    <ClCompile Include="Examples\Ex08_12.cpp" />
     <ClCompile Include="Examples\ExT.cpp" />
     <ClCompile Include="Examples\ExTest.cpp" />
     <ClCompile Include="GL\glLoader.c" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Examples\Ex08_08.h" />
     <ClInclude Include="Examples\Ex08_09.h" />
     <ClInclude Include="Examples\Ex08_11.h" />
+    <ClInclude Include="Examples\Ex08_12.h" />
     <ClInclude Include="Examples\ExT.h" />
     <ClInclude Include="Examples\ExTest.h" />
     <ClInclude Include="GL\glcorearb.h" />
@@ -225,6 +227,8 @@
     <None Include="Shaders\sh08_09.vert" />
     <None Include="Shaders\sh08_11.frag" />
     <None Include="Shaders\sh08_11.vert" />
+    <None Include="Shaders\sh08_12.frag" />
+    <None Include="Shaders\sh08_12.vert" />
     <None Include="Shaders\shadowmap_scene.fs.glsl" />
     <None Include="Shaders\shadowmap_scene.vs.glsl" />
     <None Include="Shaders\shadowmap_shadow.fs.glsl" />
